issuw #63: fixed warning in idiomaticTest